--- a/Market_Segmentation.ipynb
+++ b/Market_Segmentation.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -219,14 +219,14 @@
               "4     SUV  1600000  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Importing consumer buying behavior study dataset\n",
-        "df = pd.read_csv('Indian automoble buying behavour study 1.0.csv')\n",
+        "df = pd.read_csv('data2.csv')\n",
         "df.head()"
       ]
     },
@@ -1907,7 +1907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2571,14 +2571,14 @@
               "29                                     19129      2           34013  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Importing state-wise sales dataset\n",
-        "data = pd.read_csv('EVStats.csv')\n",
+        "data = pd.read_csv('data1.csv')\n",
         "data"
       ]
     },
